--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
+    color: white;
 }
 
 body {
@@ -29,6 +30,14 @@ body {
     background-size: cover;
     background-position: center;
     height: 85vh;
+}
+
+.login {
+    padding: 2vw;
+}
+
+.login {
+    
 }
 
 .cada-passo {
